# Video-Chunk-Compression

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Video-Chunking  Video-Scene-Change  avg_psnr_avg_ssim.cpp  calculate_averages  cmake_install.cmake  compare_video  compare_video.cpp  compile_commands.json  concatenated_data.csv  convert_videos  frame_metrics.csv  output.csv  plot  plot.cpp  plot_metrics  plot_output  plot_output.cpp  scene_change.cpp  scene_changes.txt  video_chunk.cpp  video_frames  video_frames.cpp  video_metrics.cpp  video_quality_metrics  video_sizes  video_sizes.cpp  vp9_video_chunks.sh
.cache/clangd/index/: compare_video.cpp.122D033E1CE4C075.idx  main.cpp.FAC8C964A5899600.idx  plot.cpp.4AA3AF44466DE26B.idx  scene_change.cpp.F4B47F39AEE2228B.idx  video_chunk.cpp.45B6513282ED1FDB.idx  video_frames.cpp.7A970BE0CC5A2E2F.idx  video_metrics.cpp.D9C70F8F852D0D9C.idx  video_sizes.cpp.52E29512893E7E85.idx
